# FileManager

./: CMakeLists.txt  brun_linux.sh
src/: main.cpp
